# parkingSystem_lunux

./: 3.png:Zone.Identifier  CMakeLists.txt  Car.cpp  Car.h  main.cpp  widget.cpp  widget.h  widget.ui
src/car_init/: car.cpp  car_info.cpp  main.cpp
src/header/: car.h  car_info.h  initial_setting.h  parking_status.h
src/parking_status/: initial_setting.cpp  main.cpp  main.out  main.out:Zone.Identifier  parking_status.cpp
